--- a/web/addpc.xhtml
+++ b/web/addpc.xhtml
@@ -6,18 +6,20 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Lånedatorer</title>
+        <title>Stängda Ärenden</title>
     </h:head>
+    
     <h:body>
         <header>
-            <h1>Administration</h1>
-            <div id="logo-img">
-                <img src="img/logo.png" />
-            </div>
+            <h1>Hermes- Kiosk</h1>       
+                <img src="img/logo.png" width="280px" />
         </header>
         <main>
-            <h:form class="form">
-                <p:panelGrid columns="2" class="dataTable">
+            <div class="nav">
+                
+                <hr></hr>
+            <h:form>
+                <p:panelGrid columns="2">
                     <f:facet name="header">Datornamn</f:facet>
                     <p:inputText value="#{pcBean.pcName}" />
 
@@ -29,6 +31,13 @@
                 </p:panelGrid>
                 <p:commandButton value="Lägg till" action="#{pBean.add()}"> </p:commandButton>
             </h:form>
+                <hr></hr>
+                 </div>
         </main>
+        <div class="footer">
+            <h:form >
+                <p:button outcome="admin" value="Tillbaka" style="margin-right: 20px;"></p:button>
+            </h:form>
+        </div>
     </h:body>
 </html>
