--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -8,14 +8,16 @@
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
         <title>Admin Meny</title>
     </h:head>
+    
     <h:body>
         <header>
-            <h1>Hermes- Kiosk</h1>
-            <div id="logo-img">
-                <img src="img/logo.png" />
-            </div>
+            <h1>Hermes- Kiosk</h1>       
+                <img src="img/logo.png" width="280px" />
         </header>
         <main>
+            <div class="nav">
+                
+                <hr></hr>
             <h2>Välj en</h2>
 
             <table>
@@ -64,9 +66,11 @@
                     </td>
                 </tr>
             </table>
+            <hr></hr>
+            </div>
         </main>
-        <div id="footer">
-            <h:form class="aform">
+        <div class="footer">
+            <h:form >
                 <p:button outcome="index" value="Hem" style="margin-right: 20px;"></p:button>
             </h:form>
             <p>
