--- a/web/arenden.xhtml
+++ b/web/arenden.xhtml
@@ -6,16 +6,18 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Arenden</title>
+        <title>Öppna Ärenden</title>
     </h:head>
+    
     <h:body>
         <header>
-            <h1>Administration</h1>
-            <div id="logo-img">
-                <img src="img/logo.png" />
-            </div>
+            <h1>Hermes- Kiosk</h1>       
+                <img src="img/logo.png" width="280px" />
         </header>
         <main>
+            <div class="nav">
+                
+             <hr></hr>
             <h:form>
                 <p:dataTable value="#{iBean.allIncs}" var="arende" resizableColumns="true" class="dataTable">
                     <f:facet name="header">Incidenter</f:facet>
@@ -44,7 +46,7 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
-
+                 <hr></hr>
             <h:form>
                 <p:dataTable value="#{qBean.questions}" var="arende" resizableColumns="true" class="dataTable">
                     <f:facet name="header">IT-Frågor</f:facet>
@@ -73,7 +75,7 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
-
+                 <hr></hr>
             <h:form>
                 <p:dataTable value="#{aloanBean.allPcLoans}" var="pcloan" resizableColumns="true" class="dataTable">
                     <f:facet name="header">Lånade Datorer</f:facet>
@@ -109,8 +111,10 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
+                <hr></hr>
+                </div>
         </main>
-        <div id="footer">
+        <div class="footer">
             <h:form class="aform">
                 <p:button outcome="admin" value="Tillbaka" style="margin-right: 20px;"></p:button>
             </h:form>
