--- a/web/closed.xhtml
+++ b/web/closed.xhtml
@@ -6,16 +6,17 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Stängda Arenden</title>
+        <title>Stängda Ärenden</title>
     </h:head>
+    
     <h:body>
+        <header>
+            <h1>Hermes- Kiosk</h1>       
+                <img src="img/logo.png" width="280px" />
+        </header>
         <main>
-            <header>
-                <h1>Administration</h1>
-                <div id="logo-img">
-                    <img src="img/logo.png" />
-                </div>
-            </header>
+            <div class="nav">
+                <hr></hr>
             <h:form>
                 <p:dataTable value="#{iBean.closed}" var="arende" resizableColumns="true" class="dataTable">
                     <f:facet name="header">Incidenter</f:facet>
@@ -43,7 +44,7 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
-
+                 <hr></hr>
             <h:form>
                 <p:dataTable value="#{qBean.allQs}" var="arende" resizableColumns="true" class="dataTable">
                     <f:facet name="header">IT-Frågor</f:facet>
@@ -69,7 +70,7 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
-
+                  <hr></hr>
             <h:form>
                 <p:dataTable value="#{aloanBean.closed}" var="pcloan" resizableColumns="true" class="dataTable">
                     <f:facet name="header">Lånade Datorer</f:facet>
@@ -101,9 +102,11 @@
                     </p:column>
                 </p:dataTable>
             </h:form>
+                   <hr></hr>
+        </div>
         </main>
-        <div id="footer">
-            <h:form class="aform">
+        <div class="footer">
+            <h:form >
                 <p:button outcome="admin" value="Tillbaka" style="margin-right: 20px;"></p:button>
             </h:form>
         </div>
