--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -20,7 +20,7 @@
                 <hr></hr>
             <h2>Välkommen #{user}</h2>
             <h2>Hur kan vi hjälpa dig?</h2>
-            <table class="menuTable">
+            <table>
                 <tr>
                     <td>
                         <a href="activation.xhtml">
@@ -74,7 +74,7 @@
                     </td>
                 </tr>
             </table>
-            <h:form class="form">
+            <h:form>
                 <p:commandButton value="Logga ut" action="#{login.logout()}" style="margin-top: 10px; margin-bottom: 10px;"/>  
             </h:form>
             <hr></hr>
