Lite småfix hit och ditt med marginaler och storlekar.

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -6,12 +6,12 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Admin Meny</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     
     <h:body>
         <header>
-            <h1>Hermes- Kiosk</h1>       
+            <h1>Admin Menu</h1>       
                 <img src="img/logo.png" width="280px" />
         </header>
         <main>
@@ -71,7 +71,7 @@
         </main>
         <div class="footer">
             <h:form >
-                <p:button outcome="index" value="Hem" style="margin-right: 20px;"></p:button>
+                <p:button outcome="index" value="Hem"></p:button>
             </h:form>
             <p>
                 <h:link outcome="about">&copy; Dimitrios Sria</h:link>
