--- a/web/updateit.xhtml
+++ b/web/updateit.xhtml
@@ -13,7 +13,7 @@
         <title>Adminlistor</title>
     </h:head>
     <h:body>
-        <h:form class="form">
+        <h:form>
             <p:panelGrid columns="2" style="auto">
                 <p:column>
                     <f:facet name="header">Status</f:facet>
