--- a/web/updateq.xhtml
+++ b/web/updateq.xhtml
@@ -10,10 +10,10 @@
         </script>
 
         <meta charset="utf-8" />
-        <title>Adminlistor</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     <h:body>
-        <h:form class="form">
+        <h:form>
             <p:panelGrid columns="2" style="auto">
                 <p:column>
                     <f:facet name="header">Status</f:facet>
