--- a/web/about.xhtml
+++ b/web/about.xhtml
@@ -6,12 +6,11 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Stängda Ärenden</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     
     <h:body>
-        <header>
-            <h1>Hermes- Kiosk</h1>       
+        <header>           
                 <img src="img/logo.png" width="280px" />
         </header>
         <main>
