--- a/web/addproducts.xhtml
+++ b/web/addproducts.xhtml
@@ -6,12 +6,12 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Lägg till produkter</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
 
     <h:body>
         <header>
-            <h1>Hermes- Kiosk</h1>
+            <h1>Lägg till produkter</h1>
             <img src="img/logo.png" width="280px" />
         </header>
         <main>
@@ -62,7 +62,7 @@
         </main>
         <div class="footer">
             <h:form >
-                <p:button outcome="admin" value="Tillbaka" style="margin-right: 20px;"></p:button>
+                <p:button outcome="admin" value="Tillbaka"></p:button>
             </h:form>
         </div>
     </h:body>
