--- a/web/h_order.xhtml
+++ b/web/h_order.xhtml
@@ -6,17 +6,18 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Meny</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     <h:body>
         <header>
-            <h1>Hermes- Kiosk</h1>
+            <h1>Hämta En Beställning</h1>
          
                 <img src="img/logo.png" width="280px" />
     
         </header>
         <main>
             <div class="nav">
+                <hr></hr>
             <h:form>
                 <ul>
                     <li>
@@ -43,6 +44,7 @@
                     </li>
                 </ul>
             </h:form>
+                <hr></hr>
                 </div>
         </main>
         <div class="footer">
