--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -6,13 +6,13 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Felanmälan</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     
     <h:body>
         
         <header>
-            <h1>Hermes- Kiosk</h1>       
+            <h1>Felanmälan</h1>       
                 <img src="img/logo.png" width="280px" />
         </header>
         <main>
