--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -6,7 +6,7 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Meny</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     <h:body>
         <header>
