--- a/web/products.xhtml
+++ b/web/products.xhtml
@@ -6,12 +6,12 @@
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <title>Produkter</title>
+        <title>Hermes-Kiosk</title>
     </h:head>
     
     <h:body>
         <header>
-            <h1>Hermes- Kiosk</h1>       
+            <h1>Produkter</h1>       
                 <img src="img/logo.png" width="280px" />
         </header>
         <main>
@@ -64,7 +64,7 @@
                 </p:dataTable>
             </h:form>
             <h:form>
-                <p:commandButton value="Lägg till en ny" action="addproducts"  style="margin-top: 20px;"/>
+                <p:commandButton value="Lägg till en ny" action="addproducts"/>
             </h:form>
                 <hr></hr>
                 </div>
