--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -13,7 +13,7 @@
         
         <header>
             <h1>Felanmälan</h1>       
-                <img src="img/logo.png" width="280px" />
+                <img src="img/logo.png" width="180px" />
         </header>
         <main>
             <div class="nav">
@@ -24,7 +24,7 @@
                         <h2>Inloggad som: #{login.sentUsername()}</h2>
                     </li>
                     <li>
-                        <p:selectOneListbox id="basic" value="#{aBean.descrip}" style="width: 360px; font-size:24px; padding-bottom: 15px; margin-bottom:30px; ">
+                        <p:selectOneListbox id="basic" value="#{aBean.descrip}" style="width: 360px; font-size:24px; padding-bottom: 15px; margin-bottom:30px; " required="true">
                             <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true" itemDisabled="true" />
                             <f:selectItem itemLabel="Trasig dator" itemValue="Trasig dator" />
                             <f:selectItem itemLabel="Trasig mobil" itemValue="Trasig mobil" />
