--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -23,7 +23,7 @@
     <h:body>
         <header>
             <h1>Hermes- Kiosk</h1>
-                <img src="img/logo.png" width="280px" />
+                <img src="img/logo.png" width="180px" />
            
         </header>
         <main>
@@ -32,14 +32,14 @@
             <h2>Välkommen till Leverans och Support!</h2>
             <div class="login-img">
                 <h:link outcome="login">
-                    <img src="img/login.jpg" width="640px" />
+                    <img src="img/login.jpg" width="480px" />
                 </h:link>
             </div>
-            <h3>Lägg ditt etjänstekort för att gå vidare</h3>
+            <h2>Lägg ditt etjänstekort för att gå vidare</h2>
             <hr></hr>
             <ul>
                 <li>
-                    <h:form class="pform">
+                    <h:form>
                         <h:outputLink value="javascript:void(0)" onclick="PF('dlg').show();" title="Admin Login" >
                             <i class="fas fa-users-cog fa-3x" style="color: #999999;"></i>
                         </h:outputLink>
