--- a/web/borrowpc.xhtml
+++ b/web/borrowpc.xhtml
@@ -23,7 +23,7 @@
                     <h2>Inloggad som: #{login.sentUsername()}</h2>
                 </li>
                 <li>
-                    <p:selectOneListbox value="#{select.pcName}" style="width: 360px; font-size: 26px; padding: 5px;">
+                    <p:selectOneListbox value="#{select.pcName}" style="width: 360px; font-size: 26px; padding: 5px;" required="true">
                                 <f:selectItem itemLabel="Välj en dator" noSelectionOption="true" itemDisabled="true" />
                                 <f:selectItems value="#{select.pcs}" var="pcName" itemValue="#{pcName}" />
                             </p:selectOneListbox>
@@ -34,7 +34,7 @@
                     </h3>
                 </li>
                 <li>
-                    <p:calendar id="returndate" value="#{select.idate}" pattern="yyyy-MMM-dd" mindate="today" required="true" locale="se" showOn="button" />
+                    <p:calendar id="returndate" value="#{select.idate}" pattern="yyyy-MM-dd" mindate="today" required="true" locale="se" showOn="button" />
                 </li>
                 <li>
                     <p:commandButton value="Bekräfta" action="#{aloanBean.add()}" ajax="false" style="margin-top: 30px;" />
