--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -22,7 +22,7 @@
                 
 
     <h:form id="form">
-        <p:dataGrid var="item" value="#{proBean.all}" columns="3" layout="grid"
+        <p:dataGrid var="item" value="#{proBean.filter}" columns="3" layout="grid"
         rows="10" paginator="true" id="items"
         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
         rowsPerPageTemplate="5,10,15" style="font-size: 14px;">
