la till redirect till meny när nedladdningen är klar

--- a/web/activation.xhtml
+++ b/web/activation.xhtml
@@ -39,7 +39,7 @@
                         </p:row> 
                 </p:panelGrid>
                     
-                <p:commandButton action="#{activation.printActivation()}" ajax="false" icon="fas fa-print" value="Skriv Ut" style="margin-bottom: 10px; margin-top: 10px;"/>
+                <p:commandButton action="#{activation.printActivation()}" ajax="false" icon="fas fa-print" value="Skriv Ut" style="margin-bottom: 10px; margin-top: 10px;" onclick="setTimeout(function(){window.location.href='menu.xhtml'},1500)"/>
             </h:form>
              <hr></hr>
                 </div>
