några visuella fix och trix

--- a/web/products.xhtml
+++ b/web/products.xhtml
@@ -64,7 +64,7 @@
                 </p:dataTable>
             </h:form>
             <h:form>
-                <p:commandButton value="Lägg till en ny" action="addproducts"/>
+                <p:commandButton value="Lägg till en ny" action="addproducts" style="margin-top: 10px;"/>
             </h:form>
                 <hr></hr>
                 </div>
