--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -32,7 +32,7 @@
                         </p:selectOneListbox>
                     </li>
                     <li>
-                        <p:commandButton value="Bekräfta" action="#{iBean.add()}" ajax="false" onclick="setTimeout(function(){window.location.href='menu.xhtml'},1500)"  />
+                        <p:commandButton value="Bekräfta" action="#{addincBean.add()}" ajax="false" onclick="setTimeout(function(){window.location.href='menu.xhtml'},1500)"  />
 
                     </li>
              
