--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -41,7 +41,7 @@
                     <td>
                         <a href="incident.xhtml">
                             <button class="btn">
-                                Göra en felanmälan
+                                Gör en felanmälan
                                 <i class="fas fa-tools fa-5x"></i>
                             </button>
                         </a>
@@ -67,7 +67,7 @@
                     <td>
                         <a href="webshop.xhtml">
                             <button class="btn">
-                                Beställa IT-Tillbehör
+                                Beställ IT-Tillbehör
                                 <i class="fas fa-shopping-cart fa-5x"></i>
                             </button>
                         </a>
