--- a/web/question.xhtml
+++ b/web/question.xhtml
@@ -30,7 +30,7 @@
                         
                     </li>
                     <li>
-                        <p:commandButton value="Bekräfta" action="#{qBean.add()}" ajax="false" onclick="setTimeout(function(){window.location.href='menu.xhtml'},1500)"/>
+                        <p:commandButton value="Bekräfta" action="#{addqBean.add()}" ajax="false" onclick="setTimeout(function(){window.location.href='menu.xhtml'},1500)"/>
 
                     </li>
                 </ul>
