--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -22,7 +22,7 @@
                 
 
     <h:form id="form">
-        <p:dataGrid var="item" value="#{protBean.filter}" columns="4" layout="grid"
+        <p:dataGrid var="item" value="#{listBean.filter}" columns="4" layout="grid"
         rows="10" paginator="true" id="items"
         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
         rowsPerPageTemplate="8,16,24" style="font-size: 14px; width: 100%;">
