--- a/web/closed.xhtml
+++ b/web/closed.xhtml
@@ -12,7 +12,7 @@
     <h:body>
         <header>
             <h1>Stängda Ärende</h1>       
-                <img src="img/logo.png" width="180px" />
+                <img src="img/logo.png" width="180px" class="logo"/>
         </header>
         <main>
             <div class="nav">
