--- a/web/incident.xhtml
+++ b/web/incident.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
@@ -13,7 +13,7 @@
         
         <header>
             <h1>Felanmälan</h1>       
-                <img src="img/logo.png" width="180px" />
+                <img src="img/logo.png" width="180px" class="logo"/>
         </header>
         <main>
             <div class="nav">
@@ -24,7 +24,7 @@
                         <h2>Inloggad som: #{login.sentUsername()}</h2>
                     </li>
                     <li>
-                        <p:selectOneListbox id="basic" value="#{aBean.descrip}" style="width: 360px; font-size:24px; padding-bottom: 15px; margin-bottom:30px; " required="true">
+                        <p:selectOneListbox value="#{aBean.descrip}" required="true" style="width: auto; margin-bottom: 15px;">
                             <f:selectItem itemLabel="Välj" itemValue="" noSelectionOption="true" itemDisabled="true" />
                             <f:selectItem itemLabel="Trasig dator" itemValue="Trasig dator" />
                             <f:selectItem itemLabel="Trasig mobil" itemValue="Trasig mobil" />
