--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="css/primeflex.css" />
         <h:outputStylesheet name="/css/styles.css" />
@@ -23,7 +23,7 @@
     <h:body>
         <header>
             <h1>Hermes- Kiosk</h1>
-                <img src="img/logo.png" width="180px" />
+                <img src="img/logo.png" width="180px" class="logo"/>
            
         </header>
         <main>
@@ -32,7 +32,7 @@
             <h2>Välkommen till Leverans och Support!</h2>
             <div class="login-img">
                 <h:link outcome="login">
-                    <img src="img/login.jpg" width="480px" />
+                    <img src="img/login.jpg" width="480px" class="centerlogo" />
                 </h:link>
             </div>
             <h2>Lägg ditt etjänstekort för att gå vidare</h2>
@@ -40,7 +40,7 @@
             <ul>
                 <li>
                     <h:form>
-                        <h:outputLink value="javascript:void(0)" onclick="PF('dlg').show();" title="Admin Login" >
+                        <h:outputLink value="javascript:void(0)" onclick="PF('dlg').show();" title="Admin Login" style="margin: 0 auto;" >
                             <i class="fas fa-users-cog fa-3x" style="color: #999999;"></i>
                         </h:outputLink>
 
