--- a/web/webshop.xhtml
+++ b/web/webshop.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <f:metadata name="viewport" content="width=device-width, initial-scale=1" http-equiv="Content-Type" charset="utf-8" />
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
         <script src="https://kit.fontawesome.com/915c5590c5.js" crossorigin="anonymous"></script>
         <h:outputStylesheet name="/css/styles.css" />
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
@@ -12,7 +12,7 @@
     <h:body>
         <header>
             <h1>Mini Webbshop</h1>
-            <img src="img/logo.png" width="180px" />
+            <img src="img/logo.png" width="180px" class="logo" />
         </header>
         <main>
             <div class="nav">
@@ -30,13 +30,13 @@
  
             <p:panel header="Id:#{item.prodid}" style="text-align:center; font-size: 14px;">
                 <h:panelGrid columns="1" style="width: 100%;">
-                <p:graphicImage value="DisplayImage?prodid=#{item.prodid}" width="60" height="60"/>
+                <p:graphicImage value="DisplayImage?prodid=#{item.prodid}" width="80" height="60"/>
  
                 <h:outputText value="#{item.title}" style=" font-weight: bold;" />
  
                 <p:commandLink update=":form:prodInfo" oncomplete="PF('proDialog').show()" title="View Detail">
                     <h:outputText styleClass="pi pi-search" style="margin:0 auto;"/>
-                    <f:setPropertyActionListener value="#{item}" target="#{proBean.valdProd}" />
+                    <f:setPropertyActionListener value="#{item}" target="#{orderBean.valdProd}" />
                 </p:commandLink>
                 <p:growl id="growl" life="2000" />
                 <p:commandButton id="ajax" update="growl" action="#{orderBean.addToCart(item)}" icon="fas fa-plus-circle fa-1x"/>
@@ -49,16 +49,16 @@
         
     <p:dialog header="Produkt Info" widgetVar="proDialog" modal="true" showEffect="fade" hideEffect="fade" resizable="false">
         <p:outputPanel id="prodInfo" style="text-align:center;">
-            <p:panelGrid  columns="2" rendered="#{not empty proBean.valdProd}" columnClasses="label,value">
+            <p:panelGrid  columns="2" rendered="#{not empty orderBean.valdProd}" columnClasses="label,value">
                 <f:facet name="header">
-                   <p:graphicImage value="DisplayImage?prodid=#{proBean.valdProd.prodid}" width="280" height="280"/> 
+                   <p:graphicImage value="DisplayImage?prodid=#{orderBean.valdProd.prodid}" width="280" height="280"/> 
                 </f:facet>
                  
                 <h:outputText value="Id:" />
-                <h:outputText value="#{proBean.valdProd.prodid}" />
+                <h:outputText value="#{orderBean.valdProd.prodid}" />
  
                 <h:outputText value="Beskrivning" />
-                <h:outputText value="#{proBean.valdProd.descrip}" />
+                <h:outputText value="#{orderBean.valdProd.descrip}" />
  
             </p:panelGrid>
         </p:outputPanel>
