--- a/web/addproducts.xhtml
+++ b/web/addproducts.xhtml
@@ -22,7 +22,7 @@
                 <p:panelGrid>
                     <p:row>
                         <p:column>
-                            <p:outputLabel value="Ange produktens titel" />
+                            <p:outputLabel value="Ange produktens titel" style="word-wrap: break-word;" />
                         </p:column>
                         <p:column>
                             <p:inputText value="#{proAddBean.title}" />
