--- a/web/products.xhtml
+++ b/web/products.xhtml
@@ -20,7 +20,7 @@
             <h:form id="form">
     <p:growl id="msgs" showDetail="true"/>
  
-    <p:dataTable id="products" var="products" value="#{protBean.products}" editable="true" style="margin-bottom:20px" >
+    <p:dataTable id="products" var="products" value="#{protBean.products}" editable="true" style="margin-bottom:20px" reflow="true" rows="5" >
         
         <p:ajax event="rowEdit" listener="#{protBean.onRowEdit}" update=":form:msgs"></p:ajax>
         <p:ajax event="rowEditCancel" listener="#{protBean.onRowCancel}" update=":form:msgs" />
